@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19961227
+MANIFEST for ded, version t19970112
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
